// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test artwork queries should query both auctions and fixed 1`] = `
Object {
  "data": Object {
    "listArtworks": Array [
      Object {
        "saleType": "auction",
      },
      Object {
        "saleType": "auction",
      },
      Object {
        "saleType": "auction",
      },
      Object {
        "saleType": "fixed",
      },
      Object {
        "saleType": "auction",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should query only auctions  1`] = `
Object {
  "data": Object {
    "listArtworks": Array [
      Object {
        "saleType": "auction",
      },
      Object {
        "saleType": "auction",
      },
      Object {
        "saleType": "auction",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
